--- a/css/style.css
+++ b/css/style.css
@@ -2997,6 +2997,10 @@ a.btn-primary, a.btn-secondary {
     padding-bottom: 6rem;
 }
 
+.merch-cats input[name=radio] {
+    display: none;
+}
+
 .merch-cats .between-xs {
     -ms-flex-pack: justify;
     -webkit-box-pack: justify;
@@ -3023,7 +3027,20 @@ a.btn-primary, a.btn-secondary {
     max-width: 16.25rem;
 }
 
-.merch-cats button.accordion.click {
+.merch-cats #radio1:checked ~ .merch-cats-row #btn1,
+.merch-cats #radio2:checked ~ .merch-cats-row #btn2,
+.merch-cats #radio3:checked ~ .merch-cats-row #btn3,
+.merch-cats #radio4:checked ~ .merch-cats-row #btn4,
+.merch-cats #radio5:checked ~ .merch-cats-row #btn5,
+.merch-cats #radio6:checked ~ .merch-cats-row #btn6,
+.merch-cats #radio7:checked ~ .merch-cats-row #btn7,
+.merch-cats #radio8:checked ~ .merch-cats-row #btn8,
+.merch-cats #radio9:checked ~ .merch-cats-row #btn9,
+.merch-cats #radio10:checked ~ .merch-cats-row #btn10,
+.merch-cats #radio11:checked ~ .merch-cats-row #btn11,
+.merch-cats #radio12:checked ~ .merch-cats-row #btn12,
+.merch-cats #radio13:checked ~ .merch-cats-row #btn13,
+.merch-cats #radio14:checked ~ .merch-cats-row #btn14 {
     border: 3px solid #9B1C2E;
 }
 
@@ -3046,7 +3063,20 @@ a.btn-primary, a.btn-secondary {
     transition: visibility 0.2s linear, opacity 0.2s linear;
 }
 
-.merch-cats button.accordion.click:after {
+.merch-cats #radio1:checked ~ .merch-cats-row #btn1:after,
+.merch-cats #radio2:checked ~ .merch-cats-row #btn2:after,
+.merch-cats #radio3:checked ~ .merch-cats-row #btn3:after,
+.merch-cats #radio4:checked ~ .merch-cats-row #btn4:after,
+.merch-cats #radio5:checked ~ .merch-cats-row #btn5:after,
+.merch-cats #radio6:checked ~ .merch-cats-row #btn6:after,
+.merch-cats #radio7:checked ~ .merch-cats-row #btn7:after,
+.merch-cats #radio8:checked ~ .merch-cats-row #btn8:after,
+.merch-cats #radio9:checked ~ .merch-cats-row #btn9:after,
+.merch-cats #radio10:checked ~ .merch-cats-row #btn10:after,
+.merch-cats #radio11:checked ~ .merch-cats-row #btn11:after,
+.merch-cats #radio12:checked ~ .merch-cats-row #btn12:after,
+.merch-cats #radio13:checked ~ .merch-cats-row #btn13:after,
+.merch-cats #radio14:checked ~ .merch-cats-row #btn14:after {
     opacity: 1;
     visibility: visible;
 }
@@ -3067,6 +3097,40 @@ a.btn-primary, a.btn-secondary {
     transition: all ease-out .2s;
     font-family: 'Source Sans Pro', sans-serif;
     color: #3d3939;
+}
+
+.merch-cats button.accordion label {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    cursor: pointer;
+}
+
+.merch-cats button.accordion :not(label) {
+    pointer-events: none;
+}
+
+.merch-cats button.accordion label[for=radio0] {
+    display: none;
+}
+
+.merch-cats #radio1:checked ~ .merch-cats-row #btn1 label[for=radio0],
+.merch-cats #radio2:checked ~ .merch-cats-row #btn2 label[for=radio0],
+.merch-cats #radio3:checked ~ .merch-cats-row #btn3 label[for=radio0],
+.merch-cats #radio4:checked ~ .merch-cats-row #btn4 label[for=radio0],
+.merch-cats #radio5:checked ~ .merch-cats-row #btn5 label[for=radio0],
+.merch-cats #radio6:checked ~ .merch-cats-row #btn6 label[for=radio0],
+.merch-cats #radio7:checked ~ .merch-cats-row #btn7 label[for=radio0],
+.merch-cats #radio8:checked ~ .merch-cats-row #btn8 label[for=radio0],
+.merch-cats #radio9:checked ~ .merch-cats-row #btn9 label[for=radio0],
+.merch-cats #radio10:checked ~ .merch-cats-row #btn10 label[for=radio0],
+.merch-cats #radio11:checked ~ .merch-cats-row #btn11 label[for=radio0],
+.merch-cats #radio12:checked ~ .merch-cats-row #btn12 label[for=radio0],
+.merch-cats #radio13:checked ~ .merch-cats-row #btn13 label[for=radio0],
+.merch-cats #radio14:checked ~ .merch-cats-row #btn14 label[for=radio0] {
+    display: block;
 }
 
 .merch-content .item-mob.col {
@@ -3102,7 +3166,20 @@ a.btn-primary, a.btn-secondary {
     display: none;
 }
 
-#btn1-content.openitup, #btn2-content.openitup, #btn3-content.openitup, #btn4-content.openitup, #btn5-content.openitup, #btn6-content.openitup, #btn7-content.openitup, #btn8-content.openitup, #btn9-content.openitup, #btn10-content.openitup, #btn11-content.openitup, #btn12-content.openitup, #btn13-content.openitup, #btn14-content.openitup {
+.merch-cats #radio1:checked ~ .merch-content #btn1-content,
+.merch-cats #radio2:checked ~ .merch-content #btn2-content,
+.merch-cats #radio3:checked ~ .merch-content #btn3-content,
+.merch-cats #radio4:checked ~ .merch-content #btn4-content,
+.merch-cats #radio5:checked ~ .merch-content #btn5-content,
+.merch-cats #radio6:checked ~ .merch-content #btn6-content,
+.merch-cats #radio7:checked ~ .merch-content #btn7-content,
+.merch-cats #radio8:checked ~ .merch-content #btn8-content,
+.merch-cats #radio9:checked ~ .merch-content #btn9-content,
+.merch-cats #radio10:checked ~ .merch-content #btn10-content,
+.merch-cats #radio11:checked ~ .merch-content #btn11-content,
+.merch-cats #radio12:checked ~ .merch-content #btn12-content,
+.merch-cats #radio13:checked ~ .merch-content #btn13-content,
+.merch-cats #radio14:checked ~ .merch-content #btn14-content {
     margin-top: 1rem;
     margin-bottom: 1rem;
     display: block;
