--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
                               <li><a href="https://www.youtube.com/c/firoorg" target="_blank"><i class="icon-youtube"></i></a></li>
                               <li><a href="https://www.reddit.com/r/firoproject/" target="_blank"><i class="icon-reddit"></i></a></li>
                               <li><a href="" target="_blank"><i class="icon-youku"></i></a></li>
-                              <li><a href="https://t.me/firoproject" target="_blank"><i class="icon-telegram"></i></a></li>
+                              <li><a href="https://t.me/firoorg" target="_blank"><i class="icon-telegram"></i></a></li>
                           </ul>
                       </div>
                   </div>
