Update links to new FCS

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
                        <li class="nav-item link"><a href="{{ site.baseurl }}/blog/">{% t navigation.blog %}</a></li>
                        <li class="nav-item"><a href="#">{% t navigation.crowdfunding %}</a>
                            <ul class="dropdown" aria-label="submenu">
-                               <li><a class="sub-nav-item" href="https://fcs.firo.org/" target="_blank">{% t navigation.fcs %}</a></li>
+                               <li><a class="sub-nav-item" href="https://funding.firo.org/" target="_blank">{% t navigation.fcs %}</a></li>
                                <li><a class="sub-nav-item" href="https://opencollective.com/firo" target="_blank">{% t navigation.opencollective %}</a></li>
                            </ul>
                        </li>
@@ -79,7 +79,7 @@
                           <input class="burger-checkdropdown" id="list4" type="checkbox" tabindex="0">
                           <label for="list4">{% t navigation.crowdfunding %}</label>
                           <ul class="dropdown-content">
-                              <li><a href="https://fcs.firo.org/">{% t navigation.fcs %}</a></li>
+                              <li><a href="https://funding.firo.org/">{% t navigation.fcs %}</a></li>
                               <li><a href="https://opencollective.com/firo">{% t navigation.opencollective %}</a></li>
                           </ul>
                        </li>
