Updated footer with discord and fironews

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,22 +22,17 @@
                       <div>
                           <h4>{% t footer.newsletter %}</h4>
                           <p>{% t footer.ifsub %}</p>
-                          <form class="newsletter-form">
-                            <fieldset>
-                              <input type="email" class="newsletter-email" placeholder="{% t footer.email %}*">
-                              <button type="submit" class="newsletter-submit"><span>{% t footer.sub %}</span></button>
-                            </fieldset>
-                          </form>
+                          <a class="btn-text" href="https://t.me/fironews" target="_blank">{% t footer.newsbutton %}</a>
                       </div>
                       <div class="social">
                           <h4>{% t footer.comm %}</h4>
                           <ul>
+                              <li><a href="https://discord.gg/U58MFa9X" target="_blank"><i class="icona-discord"></i></a></li>
+                              <li><a href="https://t.me/firoorg" target="_blank"><i class="icon-telegram"></i></a></li>
                               <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icon-twitter"></i></a></li>
                               <li><a href="https://www.facebook.com/firoorg/" target="_blank"><i class="icon-facebook"></i></a></li>
                               <li><a href="https://www.youtube.com/c/firoorg" target="_blank"><i class="icon-youtube"></i></a></li>
                               <li><a href="https://www.reddit.com/r/firoproject/" target="_blank"><i class="icon-reddit"></i></a></li>
-                              <li><a href="" target="_blank"><i class="icon-youku"></i></a></li>
-                              <li><a href="https://t.me/firoorg" target="_blank"><i class="icon-telegram"></i></a></li>
                           </ul>
                       </div>
                   </div>
