Fix Discord link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
                       <div class="social">
                           <h4>{% t footer.comm %}</h4>
                           <ul>
-                              <li><a href="https://discord.gg/U58MFa9X" target="_blank"><i class="icona-discord"></i></a></li>
+                              <li><a href="https://discord.gg/TGZPRbRT3Y" target="_blank"><i class="icona-discord"></i></a></li>
                               <li><a href="https://t.me/firoorg" target="_blank"><i class="icon-telegram"></i></a></li>
                               <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icon-twitter"></i></a></li>
                               <li><a href="https://www.facebook.com/firoorg/" target="_blank"><i class="icon-facebook"></i></a></li>
