add links to feed and autodiscovery

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,7 @@
                   <div class="col">
                       <h4>{% t footer.website %}</h4>
                       <ul>
+                          <li><a href="{{ site.baseurl }}/feed.xml">{% t footer.feed %}</a></li>
                           <li><a href="{{ site.baseurl }}/privacy-policy/">{% t footer.privacy %}</a></li>
                           <li><a href="">{% t footer.tos %}</a></li>
                       </ul>
