--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/img/meta/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/meta/favicon-16x16.png">
     <link rel="manifest" href="img/meta/site.webmanifest">
+    <!-- Feed autodiscovery -->
+    {% feed_meta %}
 </head>
