improve buy-firo page
fix 1 oversized logo
set max height for logos
add alt text for images
show website url when hovering
pop out effect when hovering on images

--- a/css/style.css
+++ b/css/style.css
@@ -1814,6 +1814,15 @@ a.btn-primary, a.btn-secondary {
     font-weight: bold;
 }
 
+.exch-logos img {
+    max-height: 100px;
+}
+
+.exch-logos img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 62rem) {
     
 .ex-list .row:nth-of-type(2) .col {
