--- a/css/style.css
+++ b/css/style.css
@@ -2783,18 +2783,18 @@ a.btn-primary, a.btn-secondary {
 /*blog*/
 
 .blog-section .container {
-    width: 43rem;
+    width: 71rem;
 }
 
 .blog-section .col.post-section {
     background-color: #ffffff;
-    margin-top: 2rem;
+    margin: 2rem 1rem 0 1rem;
     -webkit-box-shadow: 0px 1px 4px 0px rgba(84,104,119,0.3);
     -moz-box-shadow: 0px 1px 4px 0px rgba(84,104,119,0.3);
     box-shadow: 0px 1px 4px 0px rgba(84,104,119,0.3);
     border-radius: 10px;
     padding: 2rem;
-    
+    min-width: 40%;
 }
 
 .blog-section .col.post-section .post-meta {
@@ -2978,12 +2978,23 @@ a.btn-primary, a.btn-secondary {
     text-align: center;
 }
 
+@media only screen and (max-width: 61rem) {
+
+.blog-section .container {
+    width: 45rem;
+}
+}
+
 @media only screen and (max-width: 48rem) {
     
     
 .blog-section .container {
     width: 100%;
-}  
+}
+
+.blog-section .row {
+    flex-direction: column;
+}
     
 .blog-section .col.post-section {
     box-shadow: none;
@@ -2991,7 +3002,7 @@ a.btn-primary, a.btn-secondary {
     padding-bottom: 0;
     margin-top: 6rem;
 }
-    
+
 .blog-section .row:first-child .col.post-section {
     margin-top: 0;
 }
@@ -3016,7 +3027,7 @@ a.btn-primary, a.btn-secondary {
 .blog-section .col.post-section a.post-link h2, .blog-section .post-page h1 {
     font-size: 2rem;
 }
-    
+
 }
 
 /*guide*/
