--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
       <div class="container">
                <nav class="row" role='navigation'>
-                   <a class="logo col" href="{{ site.baseurl }}/index.html" aria-label="Firo Cryptocurrency"><img src="/img/firo-logo.svg" alt="Firo Cryptocurrency logo"></a>
+                   <a class="logo col" href="{{ site.baseurl }}" aria-label="Firo Cryptocurrency"><img src="/img/firo-logo.svg" alt="Firo Cryptocurrency logo"></a>
                    <ul class="main-menu col">
                        <li class="nav-item"><a href="#">{% t navigation.getfiro %}</a>
                            <ul class="dropdown" aria-label="submenu">
