--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
 <header>
+      <div class="spark-banner">
+            <a href="#" target="_blank">Countdown to SPARK - click!</a>
+      </div>
       <div class="container">
                <nav class="row" role='navigation'>
                    <a class="logo col" href="{{ site.baseurl }}/index.html" aria-label="Firo Cryptocurrency"><img src="/img/firo-logo.svg" alt="Firo Cryptocurrency logo"></a>
