--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
       <div class="spark-banner">
-            <a href="#" target="_blank">Countdown to SPARK - click!</a>
+            <a href="{{ site.baseurl }}/countdown.html" target="_blank">Countdown to SPARK - click here!</a>
       </div>
       <div class="container">
                <nav class="row" role='navigation'>
