--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
 <header>
+      <div class="spark-banner">
+            <a href="{{ site.baseurl }}/countdown.html" target="_blank">Countdown to SPARK - click here!</a>
+      </div>
       <div class="container">
                <nav class="row" role='navigation'>
                    <a class="logo col" href="{% if site.lang == 'en' %}
