--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,17 +22,17 @@
                       <div>
                           <h4>{% t footer.newsletter %}</h4>
                           <p>{% t footer.ifsub %}</p>
-                          <a class="btn-text" href="https://t.me/fironews" target="_blank">{% t footer.newsbutton %}</a>
+                          <a class="btn-text" href="https://t.me/fironews" target="_blank"><span>{% t footer.newsbutton %}</span><i class="icons-right-small"></i></a>
                       </div>
                       <div class="social">
                           <h4>{% t footer.comm %}</h4>
                           <ul>
-                              <li><a href="https://discord.gg/TGZPRbRT3Y" target="_blank"><i class="icona-discord"></i></a></li>
-                              <li><a href="https://t.me/firoorg" target="_blank"><i class="icon-telegram"></i></a></li>
-                              <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icon-twitter"></i></a></li>
-                              <li><a href="https://www.facebook.com/firoorg/" target="_blank"><i class="icon-facebook"></i></a></li>
-                              <li><a href="https://www.youtube.com/c/firoorg" target="_blank"><i class="icon-youtube"></i></a></li>
-                              <li><a href="https://www.reddit.com/r/firoproject/" target="_blank"><i class="icon-reddit"></i></a></li>
+                              <li><a href="https://discord.gg/TGZPRbRT3Y" target="_blank"><i class="icons-discord-2"></i></a></li>
+                              <li><a href="https://t.me/firoorg" target="_blank"><i class="icons-telegram"></i></a></li>
+                              <li><a href="https://twitter.com/firoorg" target="_blank"><i class="icons-twitter"></i></a></li>
+                              <li><a href="https://www.facebook.com/firoorg/" target="_blank"><i class="icons-facebook"></i></a></li>
+                              <li><a href="https://www.youtube.com/c/firoorg" target="_blank"><i class="icons-youtube"></i></a></li>
+                              <li><a href="https://www.reddit.com/r/firoproject/" target="_blank"><i class="icons-reddit"></i></a></li>
                           </ul>
                       </div>
                   </div>
